# mac-local-whisper

./: pyproject.toml
scripts/: voice-toggle
src/mac_local_whisper/: server.py
