[project]
name = "mac-local-whisper"
version = "0.1.0"
description = "Local voice-to-text for tmux via faster-whisper"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.1",
    "sounddevice>=0.5",
    "numpy>=1.26",
]

[project.scripts]
voice-server = "mac_local_whisper.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mac_local_whisper"]
